@@ -1,5 +1,5 @@
 {
-  "auth": "cpan:WARRINGD",
+  "auth": "zef:dwarring",
   "authors": [
     "David Warring"
   ],
@@ -7,7 +7,7 @@
   ],
   "depends": [
     "CSS::Module:ver<0.5.8+>",
-    "CSS::Properties:ver<0.7.7+>",
+    "CSS::Properties:ver<0.8.4+>",
     "CSS::Stylesheet:ver<0.0.27+>",
     "Method::Also",
     "URI:ver<0.3.3+>"
