@@ -3,3 +3,4 @@
 [ReadmeFromPod]
 ; if you want to disable generating README.md from main module's pod, then:
 disable = true
+[UploadToZef]
