@@ -1,6 +1,8 @@
 Revision history for CSS-TagSet
 
 {{$NEXT}}
+    - Adjust tests for CSS::Properties 0.8.4 inheritance fixes
+    - Upload to zef ecosystem
 
 0.0.23  2021-09-26T06:46:51+13:00
     - Add stylesheet link processing.
